# Mealie-to-cart

./: .gitignore  README.md  compose.yaml  pyproject.toml
docker/: Dockerfile
docs/: design.md  plan.md  spec.md
mealie_to_cart/: browser.py  config.py  http.py  main.py  match.py  mealie_client.py  models.py  normalize.py  report.py  walmart.py
mealie_to_cart/tests/: test_match.py  test_normalize.py
